source/sites/all/themes/shop/style.css
/* ... */
/*---------prod_box----------*/
.prod_box{
width:173px;
height:auto;
float:left;
padding: 4px 0 0 7px;
}
.top_prod_box{
width:173px;height:12px;background:#F0F0F0;float:left; padding:0px; margin:0px;
}
.bottom_prod_box{
width:173px;height:10px;background:#F0F0F0;float:left;padding:0px; margin:0px;
}
.center_prod_box{
width:173px;height: auto;background:#F0F0F0:left; text-align:center;padding:0px; margin:0px;
}
.prod_details_tab{
width:173px;
height:31px;
float:left;
background:#F0F0F0;
margin:3px 0 0 0;
}
img.left_bt{
float:left;
padding:6px 0 0 6px;
}
a.prod_details{
width:25px;
display:block;
float:left;
background:url(images/square-blue-add.gif) no-repeat left;
padding:0 0 0 20px;
margin:7px 0 0 38px;
_margin:6px 0 0 35px;
text-decoration:none;
color:#0fa0dd;
}
/*---------prod_box_big----------*/
.prod_box_big{
height:auto;
float:left;
padding: 4px 0 0 7px;
width: 532px;
}
.top_prod_box_big{
width: 532px;height:4px;background:#F0F0F0 no-repeat center bottom;float:left; padding:0px; margin:0px;
}
.bottom_prod_box_big{
width:532px;height:4px;background:#F0F0F0 no-repeat center top;float:left;padding:0px; margin:0px;
}
.center_prod_box_big{
width:532px;height: auto;background:#F0F0F0 repeat-y;float:left; text-align:center;padding:0px; margin:0px;
}
.product_img_big{
	float: left;
    padding: 13px 0 0 9px;
    width: 165px;
}
.details_big_box{
width:335px;
float:left;
padding: 0 0 0 15px;
text-align:left;
background:#F0F0F0:left;
}
.product_title_big{
color:#ea2222;
padding:5px 0 5px 0;
font-weight:bold;
font-size:14px;
}
.product_title_big a{ 
color:#ea2222;
}
.specifications{
font-size:12px;
font-weight:bold;
line-height:18px;
margin-left: 5px;
}
.thumbs{
padding:8px 5px 8px 5px;
border:1px #DFD1D1 solid;
margin:3px 0 0 0;
}
.thumbs a{
padding:3px;
}
.prod_price_big{
padding:5px 0 5px 0;
font-size:16px;
}
span.reduce{
color:#999999;
text-decoration:line-through;
}
span.desc{
color:#999999;
}
span.price{
color:#ea2222;
}
a.addtocart{
width:76px;
height:27px;
display:block;
float:left;
background:url(images/addtocart.gif) no-repeat left;
padding:0 0 0 33px;
text-decoration:none;
line-height:27px;
color:#1c4a52;
}
a.compare{
width:76px;
height:27px;
display:block;
float:left;
margin:0 0 0 10px;
background:url(images/compare.gif) no-repeat left;
padding:0 0 0 33px;
text-decoration:none;
line-height:27px;
color:#1c4a52;
}
span.blue{
color:#5F9FAB;
}
/*---------------contact_form------------------*/
.contact_form{
width:355px;
float:left;
padding:0px 0 0 75px;
}
.form_row{
width:335px;
clear:both;
padding:10px 0 10px 0;
_padding:5px 0 5px 0;
color:#a53d17;
}
label.contact{
width:75px;
float:left;
font-size:12px;
text-align:right;
padding:4px 5px 0 0;
color: #333333;
}
input.contact_input{
width:253px;
height:18px;
background-color:#fff;
color:#999999;
border:1px #DFDFDF solid;
float:left;
}
textarea.contact_textarea{
width:253px;
height:50px;
font-family:Arial, Helvetica, sans-serif;
font-size:12px;
color: #999999;
background-color:#fff;
border:1px #DFDFDF solid;
float:left;
}
a.contact{
width:99px;
height:27px;
display:block;
float:right;
margin:0 0 0 10px;
background:url(images/contact_bt.gif) no-repeat left;
padding:0 0 0 10px;
text-decoration:none;
line-height:27px;
color:#1c4a52;
}
/*--------------footer----------------*/
.footer{
width:1000px;
clear:both;
height:65px;
background:url(images/footer_bg.gif) repeat-x top;
}
.left_footer{
float:left;
width:300px;
padding:5px 0 0 10px;
}
.right_footer{
float:right;
padding:15px 30px 0 0;
}
.right_footer a{
padding:0 0 0 7px;
text-decoration:none;
color: #666666;
}
.right_footer a:hover{
text-decoration:underline;
}

.center_footer{
float:left;
width:200px;
text-align:center;
color:#666666;
padding:10px 0 0 60px;
}

.droper{
	width: 114px;
}
.form-button,
.form-submit {
color:#FFFFFF;
  margin: 0 0.5em 0 0; /* LTR */
  	background-color:#DE2A2A;
	 filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#DE2A2A, endColorstr=#4D1111); 
	background-image:-moz-linear-gradient(top, #DE2A2A 6%, #4D1111 100%);
	background-image:-webkit-linear-gradient(top, #DE2A2A 6%, #4D1111 100%);
	background-image:-ms-linear-gradient(top, #DE2A2A 6%, #4D1111 100%);
	background-image:linear-gradient(top, #DE2A2A 6%, #4D1111 100%);
	background-image:-o-linear-gradient(top, #DE2A2A 6%, #4D1111 100%);
	background-image:-webkit-gradient(linear, right top, right bottom, color-stop(6%,#DE2A2A), color-stop(100%,#4D1111));
}


/* user form starts here */

#user-login-form{
width:320px;
}
#user-login-form .form-item label {
    margin-left: 2px;
    padding: 0px;
	float:left;
    width: 75px;
	text-align:left;
	color:#CCCCCC;
}
#user-login-form .form-item label span {
	float:right;
	padding: 0 3px 0 0;
    color: #FF0000;
    font-family: Tahoma,Geneva,sans-serif;
    font-weight: bold;
/*    left: 3px;
    position: relative;
    margin-right: 20px;*/
}	

#user-login .form-item .description  {
	margin-left:75px;
	padding-top:10px;
	font-size:11px;
}	
#user-login #edit-actions {
	margin-left:150px;
}	

#user-register-form{
margin-left:10px;
}

#user-register-form .form-item label {
    margin-left: 2px;
    padding: 0px;
	float:left;
    width: 100%;
	text-align:left;
	color:#404040;
}

#user-register-form .form-item label span {
	padding: 0 3px 0 0;
    color: #FF0000;
    font-family: Tahoma,Geneva,sans-serif;
    font-weight: bold;
/*
	float:right;
	left: 3px;
    position: relative;
    margin-right: 20px;*/
}	
#user-register-form .form-item .description  {
	font-size:11px;
}	

#user-profile-form{
margin-left:10px;
/*border: 1px solid #DE2A2A;
background-color:#bbbbbb;*/
}

#user-profile-form .form-item label {
    margin-left: 2px;
    padding: 0px;
	float:left;
    width: 100%;
	text-align:left;
	color:#404040;
}

#user-profile-form .form-item label span {
	padding: 0 3px 0 0;
    color: #FF0000;
    font-family: Tahoma,Geneva,sans-serif;
    font-weight: bold;
/*
	float:right;
	left: 3px;
    position: relative;
    margin-right: 20px;*/
}	
/* ... */

